fix loading svg too small

--- a/packages/client/src/styles/components/loading.module.css
+++ b/packages/client/src/styles/components/loading.module.css
@@ -1,5 +1,6 @@
 #loading-spinner {
   width: 10vw;
+  min-width: 100px;
   z-index: 100001;
 }
 
